--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "email-validator": "^2.0.4",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2"
   }
 }
